Se ajusta el header

--- a/header.html
+++ b/header.html
@@ -13,9 +13,18 @@
         <header>
             <nav>
                 <ul class="nav-list">
-                    <li class="nav-item"><a href="#" style="text-decoration: none;">Inicio ▼</a></li>
-                    <li class="nav-item"><a href="#" style="text-decoration: none;">Acerca de ▼</a></li>
-                    <li class="nav-item"><a href="#" style="text-decoration: none;">Contacto ▼</a></li>
+
+                    <li class="nav-item"><a href="https://www.udistrital.edu.co/inicio"
+                            style="text-decoration: none;">Inicio ▼</a></li>
+                    <li class="nav-item"><a href="https://ftecnologica.udistrital.edu.co/"
+                            style="text-decoration: none;">Contacto ▼</a></li>
+                    <li class="nav-item"><a
+                            href="https://www.udistrital.edu.co/admisiones/index.php/oferta/programas/ingenieria-en-telematica-por-ciclos-propedeuticos"
+                            style="text-decoration: none;">Ingeniería ▼</a></li>
+                    <li class="nav-item"><a
+                            href="https://www.udistrital.edu.co/admisiones/index.php/oferta/programas/tecnologia-en-sistematizacion-de-datos-por-ciclos-propedeuticos"
+                            style="text-decoration: none;">Tecnología▼</a></li>
+
                 </ul>
             </nav>
             <img src="Assets/images/uploads/logo_ud.png" alt="Logo" class="logo">
