--- a/header.html
+++ b/header.html
@@ -7,16 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
     <div class="header-container">
         <header>
             <nav>
                 <ul class="nav-list">
-
                     <li class="nav-item"><a href="https://www.udistrital.edu.co/inicio"
                             style="text-decoration: none;">Inicio ▼</a></li>
-                    <li class="nav-item"><a href="https://ftecnologica.udistrital.edu.co/"
+                    <li class="nav-item"><a href="https://www.udistrital.edu.co/directorio"
                             style="text-decoration: none;">Contacto ▼</a></li>
                     <li class="nav-item"><a
                             href="https://www.udistrital.edu.co/admisiones/index.php/oferta/programas/ingenieria-en-telematica-por-ciclos-propedeuticos"
@@ -24,12 +22,10 @@
                     <li class="nav-item"><a
                             href="https://www.udistrital.edu.co/admisiones/index.php/oferta/programas/tecnologia-en-sistematizacion-de-datos-por-ciclos-propedeuticos"
                             style="text-decoration: none;">Tecnología▼</a></li>
-
                 </ul>
             </nav>
             <img src="Assets/images/uploads/logo_ud.png" alt="Logo" class="logo">
         </header>
     </div>
 </body>
-
 </html>
