Se solucionan bugs

--- a/header.html
+++ b/header.html
@@ -16,7 +16,7 @@
 
                     <li class="nav-item"><a href="https://www.udistrital.edu.co/inicio"
                             style="text-decoration: none;">Inicio ▼</a></li>
-                    <li class="nav-item"><a href="https://ftecnologica.udistrital.edu.co/"
+                    <li class="nav-item"><a href="https://www.udistrital.edu.co/directorio"
                             style="text-decoration: none;">Contacto ▼</a></li>
                     <li class="nav-item"><a
                             href="https://www.udistrital.edu.co/admisiones/index.php/oferta/programas/ingenieria-en-telematica-por-ciclos-propedeuticos"
