Se ordenan archivos y se aplica arquitectura MVC

--- a/Vista/header.html
+++ b/Vista/header.html
@@ -27,7 +27,7 @@
 
                 </ul>
             </nav>
-            <img src="Assets/images/uploads/logo_ud.png" alt="Logo" class="logo">
+            <img src="Assets/uploads/logo_ud.png" alt="Logo" class="logo">
         </header>
     </div>
 </body>
